--- a/NineX.theme.css
+++ b/NineX.theme.css
@@ -12,30 +12,38 @@
 
 @import url("https://saltssaumure.github.io/w9x-discord-theme/w9x.min.css");
 
-/* See https://github.com/Saltssaumure/w9x-discord-theme#customisation for customisation settings. */
+/* See https://github.com/Saltssaumure/w9x-discord-theme#customisation for customisation settings.*/
 :root {
-    --w9x-background-image: none;
+    --w9x-background-image: url("https://media.discordapp.net/attachments/975101320623165521/1133825350405722303/3gays.png?width=615&height=473");
     --w9x-background-color: #008080;
-    --w9x-start-text:       "Windows95";
+    --w9x-start-text:       "May95";
 
-    --w9x-titlebar-color:   #000080;
+    --w9x-titlebar-color:   #5c0080;
     --w9x-warning-color:    #FF0000;
     --w9x-positive-color:   #008000;
     --w9x-highlight-color:  #0000FF;
 
+    
+}
+
+.theme-light {
     --w9x-box-color-1:      #FFFFFF;
     --w9x-box-color-2:      #DFDFDF;
     --w9x-box-color-3:      #C0C0C0;
     --w9x-box-color-4:      #808080;
     --w9x-box-color-5:      #000000;
-}
 
-.theme-light {
     --w9x-bg-color:     #FFFFFF;
     --w9x-text-color:   #000000;
 }
 
 .theme-dark {
+    --w9x-box-color-1:      #b1b1b1;
+    --w9x-box-color-2:      #a0a0a0;
+    --w9x-box-color-3:      #8a8a8a;
+    --w9x-box-color-4:      #4c2f63;
+    --w9x-box-color-5:      #000000;
+
     --w9x-bg-color:     #000000;
     --w9x-text-color:   #DFDFDF;
 }
